# emotiva-rs232

./: README.md  fusion_flex.py  main.py  pyproject.toml  requirements.txt
emotiva_rs232/: __about__.py  __init__.py  const.py  emotiva_device.py  fusion_flex.py
tests/: main.py
